Internationalize and localize the title.

--- a/scala-source/com/barrybecker4/colormixer/message_ja.properties
+++ b/scala-source/com/barrybecker4/colormixer/message_ja.properties
@@ -2,3 +2,4 @@
 # Copyright by Barry G. Becker, 2013. Licensed under MIT License: http://www.opensource.org/licenses/MIT
 #
 
+APP_TITLE = \u30ab\u30e9\u30fc\u30df\u30ad\u30b5\u30fc
