--- a/scala-source/com/barrybecker4/colormixer/message_vi.properties
+++ b/scala-source/com/barrybecker4/colormixer/message_vi.properties
@@ -2,3 +2,4 @@
 # Copyright by Barry G. Becker, 2013. Licensed under MIT License: http://www.opensource.org/licenses/MIT
 #
 
+APP_TITLE = Máy tr?n màu
