--- a/scala-source/com/barrybecker4/colormixer/message_de.properties
+++ b/scala-source/com/barrybecker4/colormixer/message_de.properties
@@ -1,5 +1,7 @@
 #
-# Copyright by Barry G. Becker, 2013. Licensed under MIT License: http://www.opensource.org/licenses/MIT
+# Copyright by Barry G. Becker, 2020. Licensed under MIT License: http://www.opensource.org/licenses/MIT
 #
 
 APP_TITLE = Farbmischer
+DEST_ATOP_SRC = Ziel auf Quelle
+DEST_ATOP_SRC_DESC = Der Teil des Ziels, der innerhalb der Quelle liegt, wird über der Quelle zusammengesetzt und ersetzt das Ziel
