--- a/scala-source/com/barrybecker4/colormixer/message_ja.properties
+++ b/scala-source/com/barrybecker4/colormixer/message_ja.properties
@@ -1,5 +1,9 @@
 #
-# Copyright by Barry G. Becker, 2013. Licensed under MIT License: http://www.opensource.org/licenses/MIT
+# Copyright by Barry G. Becker, 2020. Licensed under MIT License: http://www.opensource.org/licenses/MIT
 #
 
 APP_TITLE = \u30ab\u30e9\u30fc\u30df\u30ad\u30b5\u30fc
+
+DEST_ATOP_SRC = \u30bd\u30fc\u30b9\u4e0a\u306e\u5b9b\u5148
+DEST_ATOP_SRC_DESC = \u30bd\u30fc\u30b9\u306e\u5185\u5074\u306b\u3042\u308b\u5b9b\u5148\u306e\u90e8\u5206\u304c\u30bd\u30fc\u30b9\u306e\u4e0a\u306b\u5408\u6210\u3055\u308c\u3001\u5b9b\u5148\u3092\u7f6e\u304d\u63db\u3048\u307e\u3059
+
