--- a/scala-source/com/barrybecker4/colormixer/message_vi.properties
+++ b/scala-source/com/barrybecker4/colormixer/message_vi.properties
@@ -1,5 +1,7 @@
 #
-# Copyright by Barry G. Becker, 2013. Licensed under MIT License: http://www.opensource.org/licenses/MIT
+# Copyright by Barry G. Becker, 2020. Licensed under MIT License: http://www.opensource.org/licenses/MIT
 #
 
-APP_TITLE = Máy tr?n màu
+APP_TITLE = \u004d\u00e1\u0079 \u0074\u0072\u1ed9\u006e \u006d\u00e0\u0075
+DEST_ATOP_SRC = \u004e\u0067\u0075\u1ed3\u006e \u0111\u00ed\u0063\u0068
+DEST_ATOP_SRC_DESC = \u004d\u1ed9\u0074 \u0070\u0068\u1ea7\u006e \u0063\u1ee7\u0061 \u0111\u00ed\u0063\u0068 \u006e\u1eb1\u006d \u0062\u00ea\u006e \u0074\u0072\u006f\u006e\u0067 \u006e\u0067\u0075\u1ed3\u006e \u0111\u01b0\u1ee3\u0063 \u006b\u1ebf\u0074 \u0068\u1ee3\u0070 \u0071\u0075\u0061 \u006e\u0067\u0075\u1ed3\u006e \u0076\u00e0 \u0074\u0068\u0061\u0079 \u0074\u0068\u1ebf \u0111\u00ed\u0063\u0068
